--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div id="hasiltes" class=" align-middle midt text-center" style="display: none;">
         <p style="color: #ffffff; font-size: 24px;"> Dengan semua pertanyaan yang telah dijawab, maka hasilnya anak anda memiliki bakat dan potensi pada bidang <span id="role"></span></p>
         <p style="color: #ffffff; font-size: 20px;">Dukung dan terus tingkatkan kemampuan anak sehingga dapat memaksimalkan potensi dirinya. Selamat berjuang!<span id="role"></span></p>
-        <a type="button" class="btn btn-secondary btn-lg" href="bruh.html" 
+        <a type="button" class="btn btn-secondary btn-lg" href="index.html" 
           style="border-radius: 20px !important; background-color: #1E90FF">KEMBALI</a>
       </div>
 
