--- a/index.html
+++ b/index.html
@@ -383,13 +383,13 @@
  
 
       if (Math.max(seni,sosial,olahraga,akademik) == seni) {
-      	document.getElementById("role").innerHTML = "Seni. Anak anda memiliki bakat abstrak,relasi ruang(spasial), musik, lukis. Seseorang dengan bakat ini jika dikembangkan dengan baik dapat mengantar seseorang untuk menjadi pelukis, pemusik, fotografer dan lain-lainnya dibidang seni.  ";
+      	document.getElementById("role").innerHTML = "Seni. Anak anda memiliki bakat abstrak,relasi ruang(spasial), musik, lukis dan memiliki minat Seni,Musical dan Aesthetic. Seseorang dengan bakat ini jika dikembangkan dengan baik dapat mengantar seseorang untuk menjadi pelukis, pemusik, fotografer dan lain-lainnya dibidang seni.  ";
       }else if (Math.max(seni,sosial,olahraga,akademik) == sosial) {
-      	document.getElementById("role").innerHTML = "Sosial. Anak anda memiliki bakat relasi, verbal, lisguistik. Seseorang dengan bakat ini sangat baik dalam hal membaca puisi, debat, dan pidato serta cocok menjadi Master of Ceremony (MC) dan Penyiar radio.  ";
+      	document.getElementById("role").innerHTML = "Sosial. Anak anda memiliki bakat relasi, verbal, lisguistik dan memiliki minat Social Service, Personal Contact dan Clarical. Seseorang dengan bakat ini sangat baik dalam hal membaca puisi, debat, dan pidato serta cocok menjadi Master of Ceremony (MC) dan Penyiar radio.  ";
       }else if (Math.max(seni,sosial,olahraga,akademik) == olahraga) {
-      	document.getElementById("role").innerHTML = "Olahraga. Anak anda memiliki kesehatan fisik dan mental yang baik dan cocok menjadi seorang atlit olahraga. ";
+      	document.getElementById("role").innerHTML = "Olahraga. Anak anda memiliki kesehatan fisik dan mental yang baik, memiliki minat atletik, mechanical serta Out Door dan cocok menjadi seorang atlit olahraga. ";
       }else if (Math.max(seni,sosial,olahraga,akademik) == akademik) {
-      	document.getElementById("role").innerHTML = "Akademik. Anak anda memiliki bakat skolastik, verbal dan numerical. Seseorang dengan bakat ini jika dikembangkan dengan baik dapat mengantar seseorang untuk menjadi tenaga pengajar atau ilmuwan. ";
+      	document.getElementById("role").innerHTML = "Akademik. Anak anda memiliki bakat skolastik, verbal dan numerical dan memiliki minat Laterarary, Scientific, Computational dan Medical . Seseorang dengan bakat ini jika dikembangkan dengan baik dapat mengantar seseorang untuk menjadi tenaga pengajar atau ilmuwan. ";
       }
       $(".tesmin").fadeOut();
       $("#hasiltes").fadeIn();
